@@ -1,3 +1,9 @@
+2016-07-17  Per Bothner  <per@bothner.com>
+
+	REPL input causing SyntaxException was not being added to history.
+	* JLineInPort.java (parse): SyntaxException is now caught by
+	Language#parse, so detect end-of-file using ERROR_SEEN.
+
 2016-07-14  Per Bothner  <per@bothner.com>
 
 	* TermErrorStream.java (write): Don't write error markers
