@@ -1,3 +1,7 @@
+2016-07-17  Per Bothner  <per@bothner.com>
+
+	* TestMisc.java: Update error - SyntaxException is no longer thrown.
+
 2015-02-17  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (mostlyclean-am): Don't depend on mostlyclean-libtool.
